--- a/mysite/blog/templates/blog/post/detail.html
+++ b/mysite/blog/templates/blog/post/detail.html
@@ -1,11 +1,12 @@
 {% extends "blog/base.html" %}
+{% load blog_tags %}
 {% block title %}{{ post.title }}{% endblock %}
 {% block content %}
  <h1>{{ post.title }}</h1>
  <p class="date">
    Published {{ post.publish }} by {{ post.author }}
  </p>
- {{ post.body|linebreaks }}
+ {{ post.body|markdown }}
  <p>
    <a href="{% url 'blog:post_share' post.id %}">
      Share this post
@@ -20,7 +21,7 @@
   {% empty %}
     There are no similar posts yet.
   {% endfor %}
-  
+
  {% with comments.count as total_comments %}
    <h2>
      {{ total_comments }} comment{{ total_comments|pluralize }}
