добавлена лента RSS постов

--- a/mysite/blog/templates/blog/post/comment.html
+++ b/mysite/blog/templates/blog/post/comment.html
@@ -1,9 +1,9 @@
 {% extends "blog/base.html" %}
-{% block title %}Add a comment{% endblock %}
+{% block title %}Добавить комментарий{% endblock %}
 {% block content %}
  {% if comment %}
-   <h2>Your comment has been added.</h2>
-   <p><a href="{{ post.get_absolute_url }}">Back to the post</a></p>
+   <h2>Ваш комментарий был добавлен</h2>
+   <p><a href="{{ post.get_absolute_url }}">Назад к посту</a></p>
  {% else %}
    {% include "blog/post/includes/comment_form.html" %}
  {% endif %}
