--- a/mysite/blog/templates/blog/base.html
+++ b/mysite/blog/templates/blog/base.html
@@ -12,15 +12,20 @@
 {% endblock %}
 </div>
 <div id="sidebar">
-<h2>My blog</h2>
+<h2>Мой блог</h2>
 <p>
-    This is my blog.
-    I've written {% total_posts %} posts so far.
+    Это мой блог!!! <br>
+    Я написала {% total_posts %} постов
 </p>
-<h3>Latest posts</h3>
+<p>
+  <a href="{% url 'blog:post_feed' %}">
+  Подписаться на мою RSS ленту
+  </a>
+</p>
+<h3>Недавние посты</h3>
 {% show_latest_posts 3 %}
 
-<h3>Most commented posts</h3>
+<h3>Рекомендованные</h3>
     {% get_most_commented_posts as most_commented_posts %}
     <ul>
       {% for post in most_commented_posts %}
