--- a/mysite/blog/templates/blog/post/detail.html
+++ b/mysite/blog/templates/blog/post/detail.html
@@ -4,39 +4,39 @@
 {% block content %}
  <h1>{{ post.title }}</h1>
  <p class="date">
-   Published {{ post.publish }} by {{ post.author }}
+   Опубликовано {{ post.publish }} автором {{ post.author }}
  </p>
  {{ post.body|markdown }}
  <p>
    <a href="{% url 'blog:post_share' post.id %}">
-     Share this post
+     Поделиться
    </a>
  </p>
 
- <h2>Similar posts</h2>
+ <h2>Похожие</h2>
   {% for post in similar_posts %}
     <p>
       <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
     </p>
   {% empty %}
-    There are no similar posts yet.
+    Нет похожих постов
   {% endfor %}
 
  {% with comments.count as total_comments %}
    <h2>
-     {{ total_comments }} comment{{ total_comments|pluralize }}
+     {{ total_comments }} Комментарии {{ total_comments|pluralize }}
    </h2>
    {% endwith %}
    {% for comment in comments %}
      <div class="comment">
        <p class="info">
-         Comment {{ forloop.counter }} by {{ comment.name }}
+         Комментарий {{ forloop.counter }} автора {{ comment.name }}
          {{ comment.created }}
        </p>
        {{ comment.body|linebreaks }}
      </div>
    {% empty %}
-     <p>There are no comments.</p>
+     <p>Здесь нет комментариев</p>
    {% endfor %}
    {% include "blog/post/includes/comment_form.html" %}
 {% endblock %}
