--- a/mysite/blog/templates/blog/base.html
+++ b/mysite/blog/templates/blog/base.html
@@ -12,20 +12,20 @@
 {% endblock %}
 </div>
 <div id="sidebar">
-<h2>Мой блог</h2>
+<h2>My blog</h2>
 <p>
-    Это мой блог!!! <br>
-    Я написала {% total_posts %} постов
+    This is my blog! <br>
+    I've wrote {% total_posts %} posts so far
 </p>
 <p>
   <a href="{% url 'blog:post_feed' %}">
-  Подписаться на мою RSS ленту
+  Sub to my RSS feed
   </a>
 </p>
-<h3>Недавние посты</h3>
+<h3>Latest posts</h3>
 {% show_latest_posts 3 %}
 
-<h3>Рекомендованные</h3>
+<h3>Recommended</h3>
     {% get_most_commented_posts as most_commented_posts %}
     <ul>
       {% for post in most_commented_posts %}
