--- a/mysite/blog/templates/blog/post/list.html
+++ b/mysite/blog/templates/blog/post/list.html
@@ -1,10 +1,10 @@
 {% extends "blog/base.html" %}
 {% load blog_tags %}
-{% block title %}Мой блог{% endblock %}
+{% block title %}My blog{% endblock %}
 {% block content %}
- <h1>Мой блог</h1>
+ <h1>My blog</h1>
 {% if tag %}
- <h2>Посты с тегами: "{{ tag.name }}"</h2>
+ <h2>Posts with tags: "{{ tag.name }}"</h2>
 {% endif %}
  {% for post in posts %}
    <h2>
@@ -12,7 +12,7 @@
        {{ post.title }}
      </a>
    </h2>
-   <p class="tags">Теги: 
+   <p class="tags">Tags: 
     {% for tag in post.tags.all %}
         <a href="{% url 'blog:post_list_by_tag' tag.slug %}">
           {{ tag.name }}
@@ -21,7 +21,7 @@
       {% endfor %}
    </p>
    <p class="date">
-     Опубликовано {{ post.publish }} автором {{ post.author }}
+     Published {{ post.publish }} by {{ post.author }}
    </p>
    {{ post.body|markdown|truncatewords_html:30 }}
  {% endfor %}
