--- a/mysite/blog/templates/blog/post/share.html
+++ b/mysite/blog/templates/blog/post/share.html
@@ -2,13 +2,13 @@
 {% block title %}Share a post{% endblock %}
  {% block content %}
   {% if sent %}
-    <h1>E-mail успешно отправлен</h1>
+    <h1>E-mail was successfully sent</h1>
     <p>
-      "{{ post.title }}" был отправлен
+      "{{ post.title }}" Was sent
       to {{ form.cleaned_data.to }}.
     </p>
   {% else %}
-    <h1>Поделиться "{{ post.title }}" по e-mail</h1>
+    <h1>Share "{{ post.title }}" by e-mail</h1>
     <form method="post">
       {{ form.as_p }}
       {% csrf_token %}
